--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,15 @@
 [submodule ".vim/bundle/CamelCaseMotion"]
 	path = .vim/bundle/CamelCaseMotion
 	url = git@github.com:bkad/CamelCaseMotion.git
+[submodule ".vim/bundle/supertab"]
+	path = .vim/bundle/supertab
+	url = git@github.com:ervandew/supertab.git
+[submodule ".vim/bundle/snipmate"]
+	path = .vim/bundle/snipmate
+	url = git@github.com:garbas/vim-snipmate.git
+[submodule ".vim/bundle/tlib"]
+	path = .vim/bundle/tlib
+	url = git@github.com:tomtom/tlib_vim.git
+[submodule ".vim/bundle/vim-addmon-mw-utils"]
+	path = .vim/bundle/vim-addmon-mw-utils
+	url = git@github.com:MarcWeber/vim-addon-mw-utils.git
