--- a/.gitmodules
+++ b/.gitmodules
@@ -25,9 +25,6 @@
 [submodule ".vim/bundle/vim-javascript"]
 	path = .vim/bundle/vim-javascript
 	url = git@github.com:pangloss/vim-javascript.git
-[submodule ".vim/bundle/indentline"]
-	path = .vim/bundle/indentline
-	url = git@github.com:Yggdroot/indentLine.git
-[submodule ".vim/bundle/indentLine"]
-	path = .vim/bundle/indentLine
-	url = git@github.com:Yggdroot/indentLine.git
+[submodule ".vim/bundle/vim-indent-guides"]
+	path = .vim/bundle/vim-indent-guides
+	url = git@github.com:nathanaelkane/vim-indent-guides.git
